@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.aonia.map.geography.shape.polyline.compression.huffman"
    
    interface CompressibleCollection
    
    Polyline <|-- HuffmanPolyline
    CompressibleCollection <|-- HuffmanPolyline
    class HuffmanPolyline
    {
        --(constructors)--
        #HuffmanPolyline()
        +HuffmanPolyline(ByteList)
        +HuffmanPolyline(Polyline)
        --
        +Polyline decompress()
        --(primitive)--
        +ByteList asBytes()
    }
    
    class HuffmanPolylineCodec
    {
        --(constructors)--
        +HuffmanPolylineCodec()
        --
        +long[] decode(ByteList input)
        +void encode(ByteArray output, Polyline)
    }
    
    MapGeographyUnitTest <|-- HuffmanPolylineTest
    class HuffmanPolylineTest
    {
        --
        +void testCompression()
        +void testDecompress()
        +void testSegment()
    }
    
@enduml

